load("//bazel:pl_build_system.bzl", "pl_cc_binary", "pl_cc_library", "pl_cc_test")

package(default_visibility = ["//src:__subpackages__"])

pl_cc_library(
    name = "carnot",
    hdrs = ["carnot.h"],
    deps = [":cc_library"],
)

pl_cc_library(
    name = "cc_library",
    srcs = glob(
        [
            "*.cc",
            "*.h",
        ],
        exclude = [
            "**/*_test.cc",
            "**/*_benchmark.cc",
            "carnot_executable.cc",
        ],
    ),
    deps = [
        "//src/carnot/exec:cc_library",
        "//src/carnot/exec/ml:cc_library",
        "//src/carnot/funcs:cc_library",
        "//src/carnot/plan:cc_library",
        "//src/carnot/planner/compiler:cc_library",
        "//src/carnot/planner/distributed:cc_library",
        "//src/carnot/planpb:plan_pl_cc_proto",
        "//src/carnot/queryresultspb:query_results_pl_cc_proto",
        "//src/carnot/udf:cc_library",
        "//src/carnot/udfspb:udfs_pl_cc_proto",
        "//src/shared/types:cc_library",
        "//src/table_store/table:cc_library",
        "@com_github_ariafallah_csv_parser//:csv_parser",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

pl_cc_test(
    name = "carnot_test",
    srcs = ["carnot_test.cc"],
    deps = [
        ":cc_library",
        "//src/carnot/exec:test_utils",
        "//src/carnot/udf_exporter:cc_library",
    ],
)

pl_cc_test(
    name = "end_to_end_join_test",
    srcs = ["end_to_end_join_test.cc"],
    deps = [
        ":cc_library",
        "//src/carnot/exec:test_utils",
        "//src/carnot/udf_exporter:cc_library",
    ],
)

pl_cc_binary(
    name = "blocking_agg_benchmark",
    testonly = 1,
    srcs = ["blocking_agg_benchmark.cc"],
    deps = [
        ":cc_library",
        "//src/carnot/exec:test_utils",
        "//src/common/benchmark:cc_library",
        "//src/table_store:test_utils",
        "//third_party:arrow",
    ],
)

pl_cc_binary(
    name = "carnot_executable",
    srcs = ["carnot_executable.cc"],
    deps = [
        ":cc_library",
    ],
)
